# csi-rs

.github/actions-rs/: grcov.yml
.github/workflows/: ci.yml
.github/workflows/actions-rs/: grcov.yml
codegen/: Cargo.toml
codegen/src/: main.rs
crates/mount-utils/: Cargo.toml
crates/mount-utils/src/: arguments.rs  fake.rs  lib.rs  runner.rs  unix.rs  utils.rs
crates/mount-utils/src/arguments/: cowarc.rs
crates/proto/: Cargo.toml
crates/proto/src/: controller.rs  lib.rs  node.rs  plugin.rs  proto.rs  utils.rs  volume.rs
crates/proto/src/controller/: capabilities.rs  create_snapshot.rs  create_volume.rs  delete_snapshot.rs  delete_volume.rs  expand_volume.rs  get_capacity.rs  get_volume.rs  list_snapshots.rs  list_volumes.rs  publish_volume.rs  secrets.rs  snapshot.rs  unpublish_volume.rs  validate_volume_capabilities.rs  volume.rs  volume_status.rs
crates/proto/src/node/: capabilities.rs  expand_volume.rs  get_info.rs  get_volume_stats.rs  publish_volume.rs  stage_volume.rs  unpublish_volume.rs  unstage_volume.rs
