[package]
name = "csi-mount-utils"
version = "0.1.0"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
cfg-if = "1"
crossbeam = "0.8.4"
duct = "0.13"
futures = "0.3"
libc = "0.2"
once_cell = "1"
smallvec = "1"
static_assertions = "1"
thiserror = "1"
tracing = "0.1"
which = "4"

[dev-dependencies]
tempfile = "3"
test-case = "1"
