[package]
name = "csi-proto"
version = "0.1.0"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bitflags = "1"
lazy_static = "1"
prost = "0.12"
prost-types = "0.7"
thiserror = "1"
tonic = "0.4"
tracing = "0.1"
